--- a/package.json
+++ b/package.json
@@ -6,11 +6,24 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "slicemachine": "start-slicemachine"
   },
   "dependencies": {
+    "@prismicio/client": "^7.1.0",
+    "@prismicio/next": "^1.3.3",
+    "@prismicio/react": "^2.7.1",
+    "framer-motion": "^10.13.0",
     "next": "13.4.10",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "styled-components": "^6.0.5"
+  },
+  "devDependencies": {
+    "@slicemachine/adapter-next": "^0.3.6",
+    "slice-machine-ui": "^1.5.3"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
