--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prismicio/client": "^7.1.0",
     "@prismicio/next": "^1.3.3",
     "@prismicio/react": "^2.7.1",
+    "formik": "^2.4.2",
     "framer-motion": "^10.13.0",
     "next": "13.4.10",
     "react": "18.2.0",
