--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "13.4.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "^6.0.5"
+    "styled-components": "^6.0.5",
+    "swiper": "^10.0.4"
   },
   "devDependencies": {
     "@slicemachine/adapter-next": "^0.3.6",
